--- a/ExamenParcialI/Recursos/Css/basicos.css
+++ b/ExamenParcialI/Recursos/Css/basicos.css
@@ -26,7 +26,7 @@ header {
 
 #img { 
     border-radius: 13px;
-    box-shadow: gray 6px;
+    box-shadow: 5px 10px #888888;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -67,6 +67,7 @@ header {
     width: 300px;
     height: 200px;
     background-color: lightblue;
+    box-shadow: 5px 10px #888888;
     margin-left: 60px;
     animation: tarjetas 1000ms ease-in;
     animation-fill-mode: forwards;
